# kdeconnect-desktop2

./: CMakeLists.txt
plugins/ping/: CMakeLists.txt  pingplugin.cpp  pingplugin.h
plugins/ping/fingerprinter/: AudioRead.cpp  CMakeLists.txt  Wavreader.cpp  calculations.cpp  fingerPrint.cpp  fingerprint.txt  matplotlibcpp.h  windowing.cpp
plugins/ping/fingerprinter/data/: fingerprint.txt  fingerprint0.txt  fingerprint1.txt  fingerprint2.txt  fingerprint3.txt  fingerprint4.txt  fingerprint5.txt  fingerprint6.txt  fingerprint7.txt  fingerprint8.txt  fingerprint9.txt  phonedata.txt
plugins/ping/fingerprinter/data/energydata/: energy0.txt  energy1.txt  energy10.txt  energy11.txt  energy12.txt  energy13.txt  energy14.txt  energy15.txt  energy16.txt  energy17.txt  energy18.txt  energy19.txt  energy2.txt  energy3.txt  energy4.txt  energy5.txt  energy6.txt  energy7.txt  energy8.txt  energy9.txt
plugins/ping/fingerprinter/data/fingerprintdata/: fingerprint.txt  fingerprint0.txt  fingerprint1.txt  fingerprint10.txt  fingerprint11.txt  fingerprint12.txt  fingerprint13.txt  fingerprint14.txt  fingerprint15.txt  fingerprint16.txt  fingerprint17.txt  fingerprint18.txt  (+9 more)
plugins/ping/fingerprinter/fftw-3.3.8/: config.status
plugins/privacy/: CMakeLists.txt  README  kdeconnect_privacy.json  privacyplugin.cpp  privacyplugin.h
plugins/privacy/fingerprinter/: AudioRead.cpp  Wavreader.cpp  calculations.cpp  fingerPrint.cpp  makefile  resample.h  windowing.cpp
plugins/privacy/fingerprinter/data/: test.pcm
plugins/privacy/fingerprinter/fftw-3.3.8/: libfftw3.la  libtool
(+485 files in other folders)
